# lab-7-8

lab-7-8/: CMakeLists.txt  main.cpp
lab-7-8/Entity/: Entity.cpp  Entity.h
